Test nel main per verificare i metodi 1-4